--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,24 @@
 
 	<dependencyManagement>
 		<dependencies>
-
+			<!--通用Mapper http://www.oschina.net/p/mybatis-mapper-->
+			<dependency>
+				<groupId>tk.mybatis</groupId>
+				<artifactId>mapper</artifactId>
+				<version>3.3.9</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>19.0</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.16.10</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
